include/omapi.h


typedef unsigned long OM_DATETIME;
OM_EXPORT int OmGetDevicePath(int deviceId, char *pathBuffer);
OM_EXPORT int OmGetBatteryLevel(int deviceId);
OM_EXPORT int OmSelfTest(int deviceId);
OM_EXPORT int OmGetMemoryHealth(int deviceId);
OM_EXPORT int OmGetBatteryHealth(int deviceId);
OM_EXPORT int OmGetAccelerometer(int deviceId, int *x, int *y, int *z);
OM_EXPORT int OmGetTime(int deviceId, OM_DATETIME *time);
OM_EXPORT int OmSetTime(int deviceId, OM_DATETIME time);
typedef enum
{
    OM_LED_AUTO = -1,           
    OM_LED_OFF = 0,             
    OM_LED_BLUE = 1,            
    OM_LED_GREEN = 2,           
    OM_LED_CYAN = 3,            
    OM_LED_RED = 4,             
    OM_LED_MAGENTA = 5,         
    OM_LED_YELLOW = 6,          
    OM_LED_WHITE = 7            
} OM_LED_STATE;
OM_EXPORT int OmSetLed(int deviceId, OM_LED_STATE ledState);
OM_EXPORT int OmIsLocked(int deviceId, int *hasLockCode);
OM_EXPORT int OmSetLock(int deviceId, unsigned short code);
OM_EXPORT int OmUnlock(int deviceId, unsigned short code);
OM_EXPORT int OmSetEcc(int deviceId, int state);
OM_EXPORT int OmGetEcc(int deviceId);
OM_EXPORT int OmCommand(int deviceId, const char *command, char *buffer, size_t bufferSize, const char *expected, unsigned int timeoutMs, char **parseParts, int parseMax);
OM_EXPORT int OmGetDelays(int deviceId, OM_DATETIME *startTime, OM_DATETIME *stopTime);
OM_EXPORT int OmSetDelays(int deviceId, OM_DATETIME startTime, OM_DATETIME stopTime);
OM_EXPORT int OmGetSessionId(int deviceId, unsigned int *sessionId);
OM_EXPORT int OmSetSessionId(int deviceId, unsigned int sessionId);
OM_EXPORT int OmGetMetadata(int deviceId, char *metadata);
OM_EXPORT int OmSetMetadata(int deviceId, const char *metadata, int size);
OM_EXPORT int OmGetLastConfigTime(int deviceId, OM_DATETIME *time);
typedef enum
{
    OM_ERASE_NONE = 0,                  
    OM_ERASE_DELETE = 1,                
    OM_ERASE_QUICKFORMAT = 2,           
    OM_ERASE_WIPE = 3                   
} OM_ERASE_LEVEL;
OM_EXPORT int OmEraseDataAndCommit(int deviceId, OM_ERASE_LEVEL eraseLevel);
OM_EXPORT int OmGetAccelConfig(int deviceId, int *rate, int *range);
OM_EXPORT int OmSetAccelConfig(int deviceId, int rate, int range);
OM_EXPORT int OmGetMaxSamples(int deviceId, int *value);
OM_EXPORT int OmSetMaxSamples(int deviceId, int value);
typedef enum
{
    OM_DOWNLOAD_NONE,                   
    OM_DOWNLOAD_ERROR,                  
    OM_DOWNLOAD_PROGRESS,               
    OM_DOWNLOAD_COMPLETE,               
    OM_DOWNLOAD_CANCELLED,              
} OM_DOWNLOAD_STATUS;
typedef void(*OmDownloadCallback)(void *, int, OM_DOWNLOAD_STATUS, int);
typedef void(*OmDownloadChunkCallback)(void *, int, void *, int, int);
OM_EXPORT int OmSetDownloadCallback(OmDownloadCallback downloadCallback, void *reference);
OM_EXPORT int OmSetDownloadChunkCallback(OmDownloadChunkCallback downloadChunkCallback, void *reference);
OM_EXPORT int OmGetDataFileSize(int deviceId);
OM_EXPORT int OmGetDataFilename(int deviceId, char *filenameBuffer);
OM_EXPORT int OmGetDataRange(int deviceId, int *dataBlockSize, int *dataOffsetBlocks, int *dataNumBlocks, OM_DATETIME *startTime, OM_DATETIME *endTime);
OM_EXPORT int OmBeginDownloading(int deviceId, int dataOffsetBlocks, int dataLengthBlocks, const char *destinationFile);
OM_EXPORT int OmBeginDownloadingReference(int deviceId, int dataOffsetBlocks, int dataLengthBlocks, const char *destinationFile, void *reference);
OM_EXPORT int OmQueryDownload(int deviceId, OM_DOWNLOAD_STATUS *downloadStatus, int *downloadValue);