bindings/python-untested/pylibomapi.py


# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 399
if _libs["omapi"].has("OmGetDevicePath", "cdecl"):
    OmGetDevicePath = _libs["omapi"].get("OmGetDevicePath", "cdecl")
    OmGetDevicePath.argtypes = [c_int, String]
    OmGetDevicePath.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 408
if _libs["omapi"].has("OmGetBatteryLevel", "cdecl"):
    OmGetBatteryLevel = _libs["omapi"].get("OmGetBatteryLevel", "cdecl")
    OmGetBatteryLevel.argtypes = [c_int]
    OmGetBatteryLevel.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 419
if _libs["omapi"].has("OmSelfTest", "cdecl"):
    OmSelfTest = _libs["omapi"].get("OmSelfTest", "cdecl")
    OmSelfTest.argtypes = [c_int]
    OmSelfTest.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 432
if _libs["omapi"].has("OmGetMemoryHealth", "cdecl"):
    OmGetMemoryHealth = _libs["omapi"].get("OmGetMemoryHealth", "cdecl")
    OmGetMemoryHealth.argtypes = [c_int]
    OmGetMemoryHealth.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 446
if _libs["omapi"].has("OmGetBatteryHealth", "cdecl"):
    OmGetBatteryHealth = _libs["omapi"].get("OmGetBatteryHealth", "cdecl")
    OmGetBatteryHealth.argtypes = [c_int]
    OmGetBatteryHealth.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 458
if _libs["omapi"].has("OmGetAccelerometer", "cdecl"):
    OmGetAccelerometer = _libs["omapi"].get("OmGetAccelerometer", "cdecl")
    OmGetAccelerometer.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int)]
    OmGetAccelerometer.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 467
if _libs["omapi"].has("OmGetTime", "cdecl"):
    OmGetTime = _libs["omapi"].get("OmGetTime", "cdecl")
    OmGetTime.argtypes = [c_int, POINTER(OM_DATETIME)]
    OmGetTime.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 476
if _libs["omapi"].has("OmSetTime", "cdecl"):
    OmSetTime = _libs["omapi"].get("OmSetTime", "cdecl")
    OmSetTime.argtypes = [c_int, OM_DATETIME]
    OmSetTime.restype = c_int

enum_anon_21 = c_int# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 498

OM_LED_AUTO = (-1)# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 498

OM_LED_OFF = 0# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 498

OM_LED_BLUE = 1# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 498

OM_LED_GREEN = 2# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 498

OM_LED_CYAN = 3# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 498

OM_LED_RED = 4# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 498

OM_LED_MAGENTA = 5# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 498

OM_LED_YELLOW = 6# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 498

OM_LED_WHITE = 7# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 498

OM_LED_STATE = enum_anon_21# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 498

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 508
if _libs["omapi"].has("OmSetLed", "cdecl"):
    OmSetLed = _libs["omapi"].get("OmSetLed", "cdecl")
    OmSetLed.argtypes = [c_int, OM_LED_STATE]
    OmSetLed.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 518
if _libs["omapi"].has("OmIsLocked", "cdecl"):
    OmIsLocked = _libs["omapi"].get("OmIsLocked", "cdecl")
    OmIsLocked.argtypes = [c_int, POINTER(c_int)]
    OmIsLocked.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 529
if _libs["omapi"].has("OmSetLock", "cdecl"):
    OmSetLock = _libs["omapi"].get("OmSetLock", "cdecl")
    OmSetLock.argtypes = [c_int, c_ushort]
    OmSetLock.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 540
if _libs["omapi"].has("OmUnlock", "cdecl"):
    OmUnlock = _libs["omapi"].get("OmUnlock", "cdecl")
    OmUnlock.argtypes = [c_int, c_ushort]
    OmUnlock.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 550
if _libs["omapi"].has("OmSetEcc", "cdecl"):
    OmSetEcc = _libs["omapi"].get("OmSetEcc", "cdecl")
    OmSetEcc.argtypes = [c_int, c_int]
    OmSetEcc.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 559
if _libs["omapi"].has("OmGetEcc", "cdecl"):
    OmGetEcc = _libs["omapi"].get("OmGetEcc", "cdecl")
    OmGetEcc.argtypes = [c_int]
    OmGetEcc.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 578
if _libs["omapi"].has("OmCommand", "cdecl"):
    OmCommand = _libs["omapi"].get("OmCommand", "cdecl")
    OmCommand.argtypes = [c_int, String, String, c_size_t, String, c_uint, POINTER(POINTER(c_char)), c_int]
    OmCommand.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 611
if _libs["omapi"].has("OmGetDelays", "cdecl"):
    OmGetDelays = _libs["omapi"].get("OmGetDelays", "cdecl")
    OmGetDelays.argtypes = [c_int, POINTER(OM_DATETIME), POINTER(OM_DATETIME)]
    OmGetDelays.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 629
if _libs["omapi"].has("OmSetDelays", "cdecl"):
    OmSetDelays = _libs["omapi"].get("OmSetDelays", "cdecl")
    OmSetDelays.argtypes = [c_int, OM_DATETIME, OM_DATETIME]
    OmSetDelays.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 638
if _libs["omapi"].has("OmGetSessionId", "cdecl"):
    OmGetSessionId = _libs["omapi"].get("OmGetSessionId", "cdecl")
    OmGetSessionId.argtypes = [c_int, POINTER(c_uint)]
    OmGetSessionId.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 649
if _libs["omapi"].has("OmSetSessionId", "cdecl"):
    OmSetSessionId = _libs["omapi"].get("OmSetSessionId", "cdecl")
    OmSetSessionId.argtypes = [c_int, c_uint]
    OmSetSessionId.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 666
if _libs["omapi"].has("OmGetMetadata", "cdecl"):
    OmGetMetadata = _libs["omapi"].get("OmGetMetadata", "cdecl")
    OmGetMetadata.argtypes = [c_int, String]
    OmGetMetadata.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 679
if _libs["omapi"].has("OmSetMetadata", "cdecl"):
    OmSetMetadata = _libs["omapi"].get("OmSetMetadata", "cdecl")
    OmSetMetadata.argtypes = [c_int, String, c_int]
    OmSetMetadata.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 688
if _libs["omapi"].has("OmGetLastConfigTime", "cdecl"):
    OmGetLastConfigTime = _libs["omapi"].get("OmGetLastConfigTime", "cdecl")
    OmGetLastConfigTime.argtypes = [c_int, POINTER(OM_DATETIME)]
    OmGetLastConfigTime.restype = c_int

enum_anon_22 = c_int# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 702

OM_ERASE_NONE = 0# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 702

OM_ERASE_DELETE = 1# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 702

OM_ERASE_QUICKFORMAT = 2# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 702

OM_ERASE_WIPE = 3# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 702

OM_ERASE_LEVEL = enum_anon_22# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 702

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 723
if _libs["omapi"].has("OmEraseDataAndCommit", "cdecl"):
    OmEraseDataAndCommit = _libs["omapi"].get("OmEraseDataAndCommit", "cdecl")
    OmEraseDataAndCommit.argtypes = [c_int, OM_ERASE_LEVEL]
    OmEraseDataAndCommit.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 776
if _libs["omapi"].has("OmGetAccelConfig", "cdecl"):
    OmGetAccelConfig = _libs["omapi"].get("OmGetAccelConfig", "cdecl")
    OmGetAccelConfig.argtypes = [c_int, POINTER(c_int), POINTER(c_int)]
    OmGetAccelConfig.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 789
if _libs["omapi"].has("OmSetAccelConfig", "cdecl"):
    OmSetAccelConfig = _libs["omapi"].get("OmSetAccelConfig", "cdecl")
    OmSetAccelConfig.argtypes = [c_int, c_int, c_int]
    OmSetAccelConfig.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 800
if _libs["omapi"].has("OmGetMaxSamples", "cdecl"):
    OmGetMaxSamples = _libs["omapi"].get("OmGetMaxSamples", "cdecl")
    OmGetMaxSamples.argtypes = [c_int, POINTER(c_int)]
    OmGetMaxSamples.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 812
if _libs["omapi"].has("OmSetMaxSamples", "cdecl"):
    OmSetMaxSamples = _libs["omapi"].get("OmSetMaxSamples", "cdecl")
    OmSetMaxSamples.argtypes = [c_int, c_int]
    OmSetMaxSamples.restype = c_int

enum_anon_23 = c_int# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 857

OM_DOWNLOAD_NONE = 0# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 857

OM_DOWNLOAD_ERROR = (OM_DOWNLOAD_NONE + 1)# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 857

OM_DOWNLOAD_PROGRESS = (OM_DOWNLOAD_ERROR + 1)# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 857

OM_DOWNLOAD_COMPLETE = (OM_DOWNLOAD_PROGRESS + 1)# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 857

OM_DOWNLOAD_CANCELLED = (OM_DOWNLOAD_COMPLETE + 1)# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 857

OM_DOWNLOAD_STATUS = enum_anon_23# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 857

OmDownloadCallback = CFUNCTYPE(UNCHECKED(None), POINTER(None), c_int, OM_DOWNLOAD_STATUS, c_int)# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 866

OmDownloadChunkCallback = CFUNCTYPE(UNCHECKED(None), POINTER(None), c_int, POINTER(None), c_int, c_int)# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 876

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 885
if _libs["omapi"].has("OmSetDownloadCallback", "cdecl"):
    OmSetDownloadCallback = _libs["omapi"].get("OmSetDownloadCallback", "cdecl")
    OmSetDownloadCallback.argtypes = [OmDownloadCallback, POINTER(None)]
    OmSetDownloadCallback.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 895
if _libs["omapi"].has("OmSetDownloadChunkCallback", "cdecl"):
    OmSetDownloadChunkCallback = _libs["omapi"].get("OmSetDownloadChunkCallback", "cdecl")
    OmSetDownloadChunkCallback.argtypes = [OmDownloadChunkCallback, POINTER(None)]
    OmSetDownloadChunkCallback.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 904
if _libs["omapi"].has("OmGetDataFileSize", "cdecl"):
    OmGetDataFileSize = _libs["omapi"].get("OmGetDataFileSize", "cdecl")
    OmGetDataFileSize.argtypes = [c_int]
    OmGetDataFileSize.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 914
if _libs["omapi"].has("OmGetDataFilename", "cdecl"):
    OmGetDataFilename = _libs["omapi"].get("OmGetDataFilename", "cdecl")
    OmGetDataFilename.argtypes = [c_int, String]
    OmGetDataFilename.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 927
if _libs["omapi"].has("OmGetDataRange", "cdecl"):
    OmGetDataRange = _libs["omapi"].get("OmGetDataRange", "cdecl")
    OmGetDataRange.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(OM_DATETIME), POINTER(OM_DATETIME)]
    OmGetDataRange.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 943
if _libs["omapi"].has("OmBeginDownloading", "cdecl"):
    OmBeginDownloading = _libs["omapi"].get("OmBeginDownloading", "cdecl")
    OmBeginDownloading.argtypes = [c_int, c_int, c_int, String]
    OmBeginDownloading.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 961
if _libs["omapi"].has("OmBeginDownloadingReference", "cdecl"):
    OmBeginDownloadingReference = _libs["omapi"].get("OmBeginDownloadingReference", "cdecl")
    OmBeginDownloadingReference.argtypes = [c_int, c_int, c_int, String, POINTER(None)]
    OmBeginDownloadingReference.restype = c_int

# /mnt/d/Newcastle/Projects/libomapi/include/omapi.h: 976
if _libs["omapi"].has("OmQueryDownload", "cdecl"):
    OmQueryDownload = _libs["omapi"].get("OmQueryDownload", "cdecl")
    OmQueryDownload.argtypes = [c_int, POINTER(OM_DOWNLOAD_STATUS), POINTER(c_int)]
    OmQueryDownload.restype = c_int
